--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
   "name": "fidigamesapi",
   "version": "1.0.0",
-  "description": "restapi for fidigames",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "web": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NaveenBen/fidigamesapi.git"
+    "url": "git+https://naveenben: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@github.com/NaveenBen/fidigamesapi.git"
   },
-  "keywords": [
-    "nodejs",
-    "mysql2",
-    "sequelize",
-    "cors",
-    "express",
-    "swagger-ui"
-  ],
-  "author": "naveenben",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/NaveenBen/fidigamesapi/issues"
   },
   "homepage": "https://github.com/NaveenBen/fidigamesapi#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.9.0",
+    "sqlite3": "^5.0.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
   }
