--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.9.0",
     "sqlite3": "^5.0.2",
     "swagger-jsdoc": "^6.1.0",
