--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.9.0",
     "sqlite3": "^5.0.2",
     "swagger-jsdoc": "^6.1.0",
